# snazzydeets

./: .gitignore  CMakeLists.txt  README.md
console_colors/: colours.hpp
graphs/: display_ascii_graphs.cpp  graph_info.md  graph_types.txt  graph_usage_guide.md  graphs.hpp  main.cpp  main2.cpp  test_colors.cpp
linked_lists/: linked_list_ascii_structures.txt  linked_list_guide.md  linked_lists.hpp  ll_types.txt  main.cpp
maps/: main.cpp  map-usage-guide.md  map_info.md  map_types.txt  maps.hpp
package/: PKGBUILD
trees/: main.cpp  tree_info.md  tree_types.txt  tree_usage_guide.md  trees.hpp
